--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         .use('riggedHand')
         .connect()
     </script>
+		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="js/conduct.js"></script>
   </body>
 </html>
