--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     </script>
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="js/conduct.js"></script>
+	<embed src="Click1.wav" autostart="false" width="0" height="0" id="sound1" enablejavascript="true">
   </body>
 </html>
