--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <title>Air DJ</title>
   </head>
   <body>
-    <script type="text/javascript" src="//js.leapmotion.com/leap-0.6.0.js"></script>
-    <script src="//js.leapmotion.com/leap-plugins-0.1.6.js"></script>
-    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
+    <script type="text/javascript" src="http://js.leapmotion.com/leap-0.6.0.js"></script>
+    <script src="http://js.leapmotion.com/leap-plugins-0.1.6.js"></script>
+    <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
     <script type="text/javascript" src="js/leap.rigged-hand-0.1.4.js"></script>
     <script type="text/javascript">
       (window.controller = new Leap.Controller)
         .use('riggedHand')
         .connect()
     </script>
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 		<script src="js/conduct.js"></script>
 	<embed src="Click1.wav" autostart="false" width="0" height="0" id="sound1" enablejavascript="true">
   </body>
