hide the move hand thing that popped up

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Air DJ</title>
+    <link rel="stylesheet" type="text/css" href="css/hide-movehand.css">
   </head>
   <body>
     <script type="text/javascript" src="http://js.leapmotion.com/leap-0.6.0.js"></script>
