give up on milkshake, add progressbar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <script type="text/javascript" src="http://js.leapmotion.com/leap-0.6.0.js"></script>
     <script src="http://js.leapmotion.com/leap-plugins-0.1.6.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
-    <script type="text/javascript" src="js/leap.rigged-hand-0.1.4.js"></script>
+    <script type="text/javascript" src="libraries/leap.rigged-hand-0.1.4.js"></script>
+    <script type="text/javascript" src="libraries/progressbar.min.js"></script>
     <script type="text/javascript">
       (window.controller = new Leap.Controller)
         .use('riggedHand')
