--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="css/hide-movehand.css">
   </head>
   <body>
-	<input id="fileInput" type="file" id="file" name="file" z-index=9999999999999999999/>
+	<button type="button" id="fileInput" onclick="runner()">BPM</button>
     <script type="text/javascript" src="http://js.leapmotion.com/leap-0.6.0.js"></script>
     <script src="http://js.leapmotion.com/leap-plugins-0.1.6.js"></script>
     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/three.js/r67/three.min.js"></script>
