--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8" />
+	<style>
+		html {
+		height: 100%;
+		background: linear-gradient(180deg, #FFFCF8, #1A1A1A 80%) no-repeat;
+		}
+	<style>
     <title>Air DJ</title>
     <link rel="stylesheet" type="text/css" href="css/hide-movehand.css">
   </head>
