--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		<style>
 			circle 
 				{
-					fill: #398FBD;
-					stroke: #398FBD;
+					fill: #598FAB;
+					stroke: #444444;
 				}
 		</style>
 
