--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		height: 100%;
 		background: linear-gradient(180deg, #FFFCF8, #1A1A1A 80%) no-repeat;
 		}
-	<style>
+	</style>
     <title>Air DJ</title>
     <link rel="stylesheet" type="text/css" href="css/hide-movehand.css">
   </head>
